# cycuoop.11372005

./: LICENSE  README.md  bus_0100023250.csv  bus_stations.csv  bus_stations_times.csv
20250225/: Exercise-1.9.2.py  Exercise-1.9.3.py  Exercise-1.9.4.py  Exercise-2.11.2.py  Exercise-2.11.3.py  Exercise-3.11.2.py
20250304/: bus_route_map.html  hw1.py  hw2.py  hw3.py  hw4.py  台北市_公車路線_站牌資料.csv  路線資訊20250610.csv
20250311/: 20250311.1.py  20250311.3.2.py  20250311.3.py  20250311.9.15.3.py  2050311.2.py  311.xlsx
20250401/: HW02.py  HW03.py  HW1.py  bus1.html
20250408/: HW1.py  HW2.py  HW3.py
20250421/: exam1.py  exam2.py  exam3.py
20250422/: 1137200511022328 .py  bus_info_1137200511022328.py  bus_stop2  call_fun_1137200511022328.py  exe1.py  exe2.py  exe3.py
20250429/: 0429exe1.py  amimated_map_with_bus.py  animated_map_with_person.html  bus_animation.html  bus_map_with_animation.html  python generate_map_with_animation.py
20250506/: ebus_taipei.py  hellow.py  pyproject (1).toml  readme.md
20250513/: ebus_map.py  ebus_map_hw1.py  ebus_map_hw2.py  setup_and_run.py
20250513/ebus_map_hw1-0.0.0/: PKG-INFO
20250513/m25305/: ebus_map_hw1.py  pyproject.toml
20250610REPORT/: 1.py  bus_route_map.html  res = requests.py  taipei_city_bus_stop (1).gpkg  taipei_city_bus_stop.csv
20500520/: bus.py  fail.py  subject.py  被二一的名單.csv
