[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebus_project"
version = "0.1.0"
description = "Taipei eBus map project"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "greenlet==2.0.1",
    "numpy==2.2.0",
    "pandas==2.2.2",
    "requests==2.31.0",
    "Jinja2==3.1.3",
    "matplotlib==3.8.4",
    "pyttsx3==2.90.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "SQLAlchemy==2.0.40",
    "typing_extensions==4.13.2",
    "tzdata==2025.2"
]

[project.scripts]
ebus = "ebus_map:main"
